all slide functions fixed, all navbar problems fixed, screen doesnt stretch any more

--- a/src/components/1.Navbar/navbar.css
+++ b/src/components/1.Navbar/navbar.css
@@ -2,9 +2,10 @@
 
 #header {
     
-    width: 100%;
+    
     height: 70px;
     top: 0;
+    
     right: 0;
     z-index: 1000;
     align-items: center;
